[gd_scene load_steps=9 format=3 uid="uid://beu3d5fp5uxxq"]

[ext_resource type="Script" path="res://scenes/main_game_status.gd" id="1_t6mxp"]
[ext_resource type="Texture2D" uid="uid://c1wudigqisxj0" path="res://scenes/icons/harvest-svgrepo-com.svg" id="1_ygwak"]

[sub_resource type="Gradient" id="Gradient_doerb"]
colors = PackedColorArray(0.0768358, 0.0768358, 0.0768358, 1, 0.118581, 0.118581, 0.118581, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rrru1"]
gradient = SubResource("Gradient_doerb")
width = 496

[sub_resource type="Gradient" id="Gradient_ce12f"]
colors = PackedColorArray(0, 0.216667, 0.52, 1, 3.36915e-06, 0.319495, 0.742682, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tmhfr"]
gradient = SubResource("Gradient_ce12f")
width = 496

[sub_resource type="Gradient" id="Gradient_xndux"]
colors = PackedColorArray(0.52, 0.459333, 0, 1, 0.74, 0.653667, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w6ehm"]
gradient = SubResource("Gradient_xndux")
width = 496

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 1024.0
script = ExtResource("1_t6mxp")

[node name="expansion_left_3" type="Control" parent="."]
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 500.0
offset_bottom = 252.0

[node name="expansion_left_3_ProgressBars" type="VBoxContainer" parent="expansion_left_3"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 496.0
offset_bottom = 248.0
pivot_offset = Vector2(252, 124)
theme_override_constants/separation = 20
alignment = 1

[node name="expansion_left_3_WaterProgressBar" type="TextureProgressBar" parent="expansion_left_3/expansion_left_3_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_tmhfr")

[node name="expansion_left_3_SunProgressBar" type="TextureProgressBar" parent="expansion_left_3/expansion_left_3_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_w6ehm")

[node name="expansion_left_3_ReadyToHarvest" type="HBoxContainer" parent="expansion_left_3"]
unique_name_in_owner = true
visible = false
modulate = Color(0.2295, 0.51, 0, 1)
layout_mode = 0
offset_left = 10.0
offset_right = 486.0
offset_bottom = 248.0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="expansion_left_3/expansion_left_3_ReadyToHarvest"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("1_ygwak")
expand_mode = 5
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="expansion_left_3/expansion_left_3_ReadyToHarvest/TextureRect"]
custom_minimum_size = Vector2(504, 248)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="expansion_left_3/expansion_left_3_ReadyToHarvest"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "READY TO
HARVEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="expansion_right_0" type="Control" parent="."]
anchors_preset = 0
offset_left = 508.0
offset_top = 4.0
offset_right = 1004.0
offset_bottom = 252.0

[node name="expansion_right_0_ProgressBars" type="VBoxContainer" parent="expansion_right_0"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 496.0
offset_bottom = 248.0
pivot_offset = Vector2(252, 124)
theme_override_constants/separation = 20
alignment = 1

[node name="expansion_right_0_WaterProgressBar" type="TextureProgressBar" parent="expansion_right_0/expansion_right_0_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_tmhfr")

[node name="expansion_right_0_SunProgressBar" type="TextureProgressBar" parent="expansion_right_0/expansion_right_0_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_w6ehm")

[node name="expansion_right_0_ReadyToHarvest" type="HBoxContainer" parent="expansion_right_0"]
unique_name_in_owner = true
visible = false
modulate = Color(0.2295, 0.51, 0, 1)
layout_mode = 0
offset_left = 10.0
offset_right = 486.0
offset_bottom = 248.0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="expansion_right_0/expansion_right_0_ReadyToHarvest"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("1_ygwak")
expand_mode = 5
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="expansion_right_0/expansion_right_0_ReadyToHarvest/TextureRect"]
custom_minimum_size = Vector2(504, 248)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="expansion_right_0/expansion_right_0_ReadyToHarvest"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "READY TO
HARVEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="expansion_left_0" type="Control" parent="."]
anchors_preset = 0
offset_left = 4.0
offset_top = 260.0
offset_right = 500.0
offset_bottom = 508.0

[node name="expansion_left_0_ProgressBars" type="VBoxContainer" parent="expansion_left_0"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 496.0
offset_bottom = 248.0
pivot_offset = Vector2(252, 124)
theme_override_constants/separation = 20
alignment = 1

[node name="expansion_left_0_WaterProgressBar" type="TextureProgressBar" parent="expansion_left_0/expansion_left_0_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_tmhfr")

[node name="expansion_left_0_SunProgressBar" type="TextureProgressBar" parent="expansion_left_0/expansion_left_0_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_w6ehm")

[node name="expansion_left_0_ReadyToHarvest" type="HBoxContainer" parent="expansion_left_0"]
unique_name_in_owner = true
visible = false
modulate = Color(0.2295, 0.51, 0, 1)
layout_mode = 0
offset_left = 10.0
offset_right = 486.0
offset_bottom = 248.0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="expansion_left_0/expansion_left_0_ReadyToHarvest"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("1_ygwak")
expand_mode = 5
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="expansion_left_0/expansion_left_0_ReadyToHarvest/TextureRect"]
custom_minimum_size = Vector2(504, 248)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="expansion_left_0/expansion_left_0_ReadyToHarvest"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "READY TO
HARVEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="initial_1" type="Control" parent="."]
anchors_preset = 0
offset_left = 508.0
offset_top = 260.0
offset_right = 1004.0
offset_bottom = 508.0

[node name="initial_1_ProgressBars" type="VBoxContainer" parent="initial_1"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 496.0
offset_bottom = 248.0
pivot_offset = Vector2(252, 124)
theme_override_constants/separation = 20
alignment = 1

[node name="initial_1_WaterProgressBar" type="TextureProgressBar" parent="initial_1/initial_1_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_tmhfr")

[node name="initial_1_SunProgressBar" type="TextureProgressBar" parent="initial_1/initial_1_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_w6ehm")

[node name="initial_1_ReadyToHarvest" type="HBoxContainer" parent="initial_1"]
unique_name_in_owner = true
visible = false
modulate = Color(0.2295, 0.51, 0, 1)
layout_mode = 0
offset_left = 10.0
offset_right = 486.0
offset_bottom = 248.0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="initial_1/initial_1_ReadyToHarvest"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("1_ygwak")
expand_mode = 5
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="initial_1/initial_1_ReadyToHarvest/TextureRect"]
custom_minimum_size = Vector2(504, 248)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="initial_1/initial_1_ReadyToHarvest"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "READY TO
HARVEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="initial_0" type="Control" parent="."]
anchors_preset = 0
offset_left = 4.0
offset_top = 516.0
offset_right = 500.0
offset_bottom = 764.0

[node name="initial_0_ProgressBars" type="VBoxContainer" parent="initial_0"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 496.0
offset_bottom = 248.0
pivot_offset = Vector2(252, 124)
theme_override_constants/separation = 20
alignment = 1

[node name="initial_0_WaterProgressBar" type="TextureProgressBar" parent="initial_0/initial_0_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_tmhfr")

[node name="initial_0_SunProgressBar" type="TextureProgressBar" parent="initial_0/initial_0_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_w6ehm")

[node name="initial_0_ReadyToHarvest" type="HBoxContainer" parent="initial_0"]
unique_name_in_owner = true
visible = false
modulate = Color(0.2295, 0.51, 0, 1)
layout_mode = 0
offset_left = 10.0
offset_right = 486.0
offset_bottom = 248.0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="initial_0/initial_0_ReadyToHarvest"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("1_ygwak")
expand_mode = 5
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="initial_0/initial_0_ReadyToHarvest/TextureRect"]
custom_minimum_size = Vector2(504, 248)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="initial_0/initial_0_ReadyToHarvest"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "READY TO
HARVEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="expansion_left_2" type="Control" parent="."]
anchors_preset = 0
offset_left = 508.0
offset_top = 516.0
offset_right = 1004.0
offset_bottom = 764.0

[node name="expansion_left_2_ProgressBars" type="VBoxContainer" parent="expansion_left_2"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 496.0
offset_bottom = 248.0
pivot_offset = Vector2(252, 124)
theme_override_constants/separation = 20
alignment = 1

[node name="expansion_left_2_WaterProgressBar" type="TextureProgressBar" parent="expansion_left_2/expansion_left_2_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_tmhfr")

[node name="expansion_left_2_SunProgressBar" type="TextureProgressBar" parent="expansion_left_2/expansion_left_2_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_w6ehm")

[node name="expansion_left_2_ReadyToHarvest" type="HBoxContainer" parent="expansion_left_2"]
unique_name_in_owner = true
visible = false
modulate = Color(0.2295, 0.51, 0, 1)
layout_mode = 0
offset_left = 10.0
offset_right = 486.0
offset_bottom = 248.0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="expansion_left_2/expansion_left_2_ReadyToHarvest"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("1_ygwak")
expand_mode = 5
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="expansion_left_2/expansion_left_2_ReadyToHarvest/TextureRect"]
custom_minimum_size = Vector2(504, 248)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="expansion_left_2/expansion_left_2_ReadyToHarvest"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "READY TO
HARVEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="expansion_left_1" type="Control" parent="."]
anchors_preset = 0
offset_left = 4.0
offset_top = 772.0
offset_right = 500.0
offset_bottom = 1020.0

[node name="expansion_left_1_ProgressBars" type="VBoxContainer" parent="expansion_left_1"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 496.0
offset_bottom = 248.0
pivot_offset = Vector2(252, 124)
theme_override_constants/separation = 20
alignment = 1

[node name="expansion_left_1_WaterProgressBar" type="TextureProgressBar" parent="expansion_left_1/expansion_left_1_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_tmhfr")

[node name="expansion_left_1_SunProgressBar" type="TextureProgressBar" parent="expansion_left_1/expansion_left_1_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_w6ehm")

[node name="expansion_left_1_ReadyToHarvest" type="HBoxContainer" parent="expansion_left_1"]
unique_name_in_owner = true
visible = false
modulate = Color(0.2295, 0.51, 0, 1)
layout_mode = 0
offset_left = 10.0
offset_right = 486.0
offset_bottom = 248.0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="expansion_left_1/expansion_left_1_ReadyToHarvest"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("1_ygwak")
expand_mode = 5
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="expansion_left_1/expansion_left_1_ReadyToHarvest/TextureRect"]
custom_minimum_size = Vector2(504, 248)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="expansion_left_1/expansion_left_1_ReadyToHarvest"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "READY TO
HARVEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="expansion_right_1" type="Control" parent="."]
anchors_preset = 0
offset_left = 508.0
offset_top = 772.0
offset_right = 1004.0
offset_bottom = 1020.0

[node name="expansion_right_1_ProgressBars" type="VBoxContainer" parent="expansion_right_1"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 496.0
offset_bottom = 248.0
pivot_offset = Vector2(252, 124)
theme_override_constants/separation = 20
alignment = 1

[node name="expansion_right_1_WaterProgressBar" type="TextureProgressBar" parent="expansion_right_1/expansion_right_1_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_tmhfr")

[node name="expansion_right_1_SunProgressBar" type="TextureProgressBar" parent="expansion_right_1/expansion_right_1_ProgressBars"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
texture_under = SubResource("GradientTexture2D_rrru1")
texture_progress = SubResource("GradientTexture2D_w6ehm")

[node name="expansion_right_1_ReadyToHarvest" type="HBoxContainer" parent="expansion_right_1"]
unique_name_in_owner = true
visible = false
modulate = Color(0.2295, 0.51, 0, 1)
layout_mode = 0
offset_left = 10.0
offset_right = 486.0
offset_bottom = 248.0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="expansion_right_1/expansion_right_1_ReadyToHarvest"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("1_ygwak")
expand_mode = 5
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="expansion_right_1/expansion_right_1_ReadyToHarvest/TextureRect"]
custom_minimum_size = Vector2(504, 248)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="expansion_right_1/expansion_right_1_ReadyToHarvest"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "READY TO
HARVEST"
horizontal_alignment = 1
vertical_alignment = 1
